# mlbench

./: README.md  demo.ipynb  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: publish.yml
mlbench/: __init__.py  ap.py  config.py  metric.py  metrics.py  stat.py  utils.py  viz.py
tests/: test.py
