[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[project]
name = "mlbench"
version = "0.0.2"
description = "ML benchmarking utils"
authors = [
  { name = "Amir Ziai", email = "arziai@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "scipy",
    "numpy",
    "scikit-learn",
    "pandas",
    "matplotlib",
]

[project.urls]
"Homepage" = "https://github.com/amirziai/mlbench"
"Bug Tracker" = "https://github.com/amirziai/mlbench/issues"
